# Autonomous_Mobile_Robots-Studies

./: .gitignore  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
src/: dc.sdf
src/cpp_turtle_controller/: CMakeLists.txt  package.xml
src/cpp_turtle_controller/src/: turtle_controller.cpp
src/py_turtle_controller/: package.xml  setup.cfg  setup.py
src/py_turtle_controller/py_turtle_controller/: template_turtle_controller.py  turtle_pid_controller.py
src/trajectory_control/: package.xml  setup.cfg  setup.py
src/trajectory_control/trajectory_control/: exercise_trajectory_control.py
